5.2.1 Fixed Audio System instability on Linux
5.2.0 SecureRandom Number Generator extra Secured
      Decrypt, Remove Keys & Re-encrypt to Secure
      User delete also deletes matching Key Items
      Audio System code cleaned up and improved
      Added Key Match & Key Write User-Printing
      Added Key Directory Full Path show Tooltip
5.1.1 New Audio System for better (audio) stability
      Update is tested & supported on Free/GhostBSD
5.1.0 Added manual create key discouragement dialog
      Fixed incorrect printing of "Create Key" path
      "Create Key" path only prints on user request
5.0.2 Fixed major Auto-Key I/O Buffer Performance Issue
5.0.1 Added Pause & Stop during Auto-Key Creation
5.0.0 Game changing One-Time Pad "Auto Key Mode"
      encrypt files with 100% One-Time Pad Security
4.8.0 Major Upgrade Java8-u212 security & stability updates
      Please UN-Install FinalCrypt before installing v4.8.0
      The FinalCrypt Windows Portable upgraded to Java8-u201
      Right click FinalCrypt WinStartMenu remove FinalCrypt
      Nearly doubled the "Create Key" Write Throughput Perf 
      Bugfix refreshing directories in both file managers
      Improved auto resize Info & Dialog Alert Windows
4.7.1 Added: Click Share on Social Media to Entitle for Free Support.
4.7.0 Autoscaled password font-size. Quick user-reenabled animations.
4.6.1 Disabled unmasked password during encryption. Decreased password font size from px 14 to 12.
4.6.0 Added show / mask password checkbox. Improved mouse-focus password field.
4.5.0 More clear instructions on password usage. Removed parallel Voice Guidance / Speech.
4.4.3 Improved sound stability enclosing sound-player in Thread
4.4.2 Added extra filemanager autoresize columns detailsview.
4.4.1 Fixed additional filemanager autoresize columns issues. Fixed several filemanager stability issues on OSX.
4.4.0 Fixed filemanager autoresize column-width. Fixed Apple OSX hanging after encryption.