@@ -66,6 +66,26 @@
                 1, 0.0 , 0 , 1);*/
 }
 
+.key_button
+{
+    /*    -fx-background-image: url('../../shared-resources/fxmldemoImages/CoarseGrid.png');*/
+    -fx-background-color:
+        linear-gradient(#686868 0%, #232723 25%, #373837 75%, #757575 100%),
+        linear-gradient(#020b02, #3a3a3a),
+        linear-gradient(#9d9e9d 0%, #6b6a6b 20%, #343534 80%, #242424 100%),
+        linear-gradient(#8a8a8a 0%, #6b6a6b 20%, #343534 80%, #262626 100%),
+        linear-gradient(#404040 0%, #303030 53%, #303030 54%, #202020 100%);
+    -fx-background-insets: 0,1,4,5,6;
+    -fx-background-radius: 9,8,5,4,3;
+    -fx-padding: 15 30 15 30;
+    -fx-font-family: "Liberation Sans";
+    /*-fx-font-size: 18px;
+    -fx-font-weight: bold;
+    -fx-text-fill: white;
+    -fx-effect: dropshadow( three-pass-box , rgba(255,255,255,0.2) ,
+                1, 0.0 , 0 , 1);*/
+}
+
 .background_dark
 {
     /*    -fx-background-image: url('../../shared-resources/fxmldemoImages/CoarseGrid.png');*/
