@@ -1,7 +1,7 @@
 [Version] =		{5.2.1}
 [] = {} ================================================================
 [Release Notes] =	{Fixed Audio System instability on Linux}
-[Release Message] =	{Fixed Audio System instability on Linux}
+[Release Message] =	{Added delete button visible on all OSes}
 [] = {} ----------------------------------------------------------------
 [Alert Subject] =	{}
 [Alert Message] =	{}
@@ -24,6 +24,7 @@
 [Update Notes] =	{Update 1}
 [Update Notes] =	{}
 [Update Notes] =	{   Fixed Audio System instability on Linux}
+[Update Notes] =	{   Added delete button visible on all OSes}
 [] = {} --------------------------------------------------------------------------------------------------------
 [Alert Subject_] =	{}
 [Alert Notes_] =	{}
