@@ -1,4 +1,5 @@
 5.2.1 Fixed Audio System instability on Linux
+      Added delete button visible on all OSes
 5.2.0 SecureRandom Number Generator extra Secured
       Decrypt, Remove Keys & Re-encrypt to Secure
       User delete also deletes matching Key Items
